# robo-seiten

./: .gitignore  hi.py  neuesten_stand_runterladen.bat  pyproject.toml  requirements.txt  run.py  websites.py
code/: browser.py  configuration.py  hi.py  run.py  website.py
